# django-app

./: Dockerfile  devices.csv  docker-compose.yaml  pyproject.toml  requirements.txt
HTML_CSS/: index4.html
Testing/mysite/myauth/: tests.py
mysite/: db.sqlite3  log.txt  requirements.txt  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html
mysite/data/: db.sqlite3
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  views.py
mysite/shopapp/: admin.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: group-fixtures.json  order-fixtures.json  product-fixtures.json  user-fixtures.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_alter_product_discount.py  0008_alter_product_options_product_created_by.py  0009_order_receipt.py  0010_product_preview.py  0011_productimage.py  0012_alter_order_options_alter_product_options_and_more.py
(+40 files in other folders)
