[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["david <david.oganesyan.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
djangorestframework = "^3.15.2"
django-debug-toolbar = "^4.4.6"
django-filter = "^24.2"
gunicorn = "^22.0.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
